--- a/assets/index.html
+++ b/assets/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Roboto+Mono" rel="stylesheet">
   </head>
   <body ng-app="chattyApp">
 
